--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flexboxgrid",
   "version": "4.0.0",
   "description": "Grid based off of CSS3 flexbox specification",
-  "style": "css/flexboxgrid.css",
+  "style": "src/css/flexboxgrid.css",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
